@@ -78,10 +78,10 @@ IF( NOT LIBDBUS_LIBRARIES )
 	MESSAGE( FATAL_ERROR "dbus not found!" )
 ENDIF( NOT LIBDBUS_LIBRARIES )
 
-PKG_CHECK_MODULES( LIBFLAC flac )
-IF( NOT LIBFLAC_LIBRARIES )
-	MESSAGE( FATAL_ERROR "libflac not found!" )
-ENDIF( NOT LIBFLAC_LIBRARIES )
+#PKG_CHECK_MODULES( LIBFLAC flac )
+#IF( NOT LIBFLAC_LIBRARIES )
+#	MESSAGE( FATAL_ERROR "libflac not found!" )
+#ENDIF( NOT LIBFLAC_LIBRARIES )
 
 PKG_CHECK_MODULES( LIBGIO gio-2.0 )
 IF( NOT LIBGIO_LIBRARIES )
